nitric/resources/dsl/.antlr/DataflowParser.java
// Generated from /home/viperarossa/poli/thesis/python-sdk/nitric/resources/dsl/Dataflow.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DataflowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATAFLOW=1, PRODUCER=2, CONSUMER=3, FILTER=4, SELECT=5, DERIVE=6, WINDOW=7, 
		AGGREGATE=8, JOIN=9, MAPTOSTATE=10, MAPTODATA=11, EDGE=12, AS=13, ON=14, 
		BY=15, GROUP=16, KEY=17, VALUE=18, USING=19, TYPE=20, SLIDE=21, WATERMARK=22, 
		SCHEDULE=23, PERSIST=24, VOLATILE=25, FREQUENCY=26, DELIVERY=27, DATA=28, 
		STATE=29, HIGH=30, MEDIUM=31, LOW=32, AT_MOST_ONCE=33, AT_LEAST_ONCE=34, 
		EXACTLY_ONCE=35, AND=36, OR=37, NOT=38, IS=39, NULL=40, BETWEEN=41, TRUE=42, 
		FALSE=43, INNER=44, LEFT=45, LEFT_SEMI=46, FULL=47, FULL_OUTER=48, REPLACE=49, 
		INCREMENT=50, DECREMENT=51, MAXIMUM=52, MINIMUM=53, COLLECT=54, ISTREAM=55, 
		DSTREAM=56, RSTREAM=57, SUM=58, COUNT=59, AVG=60, MAX=61, MIN=62, LAST=63, 
		FIRST=64, STDDEV=65, VARIANCE=66, COLLECT_LIST=67, UPPER=68, LOWER=69, 
		ROUND=70, ABS=71, FLOOR=72, CEIL=73, CAST=74, COALESCE=75, LENGTH=76, 
		SUBSTRING=77, CONCAT=78, TO_TIMESTAMP=79, DATE_FORMAT=80, YEAR=81, MONTH=82, 
		DAY=83, HOUR=84, T_DOUBLE=85, T_LONG=86, T_STRING=87, T_BOOLEAN=88, T_TIMESTAMP=89, 
		CASE=90, WHEN=91, THEN=92, ELSE=93, END=94, EQ=95, NEQ=96, GT=97, LT=98, 
		GTE=99, LTE=100, PLUS=101, MINUS=102, STAR=103, SLASH=104, ARROW=105, 
		COMMA=106, COLON=107, LBRACE=108, RBRACE=109, LBRACKET=110, RBRACKET=111, 
		LPAREN=112, RPAREN=113, STRING=114, NUMBER=115, ID=116, WS=117, LINE_COMMENT=118, 
		BLOCK_COMMENT=119;
	public static final int
		RULE_dataflow = 0, RULE_producer = 1, RULE_schema = 2, RULE_fieldDef = 3, 
		RULE_consumer = 4, RULE_type = 5, RULE_frequency = 6, RULE_frequencyVal = 7, 
		RULE_delivery = 8, RULE_deliveryVal = 9, RULE_actionComponent = 10, RULE_filterComponent = 11, 
		RULE_deriveComponent = 12, RULE_deriveExpr = 13, RULE_selectComponent = 14, 
		RULE_selectExpr = 15, RULE_windowComponent = 16, RULE_aggregateComponent = 17, 
		RULE_joinComponent = 18, RULE_mapToStateComponent = 19, RULE_stateOperation = 20, 
		RULE_mapToDataComponent = 21, RULE_streamOperator = 22, RULE_edge = 23, 
		RULE_scheduleProp = 24, RULE_aggExpr = 25, RULE_aggFunc = 26, RULE_joinType = 27, 
		RULE_compOp = 28, RULE_arithOp = 29, RULE_typeName = 30, RULE_literal = 31, 
		RULE_name = 32, RULE_expression = 33, RULE_builtinFunc = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"dataflow", "producer", "schema", "fieldDef", "consumer", "type", "frequency", 
			"frequencyVal", "delivery", "deliveryVal", "actionComponent", "filterComponent", 
			"deriveComponent", "deriveExpr", "selectComponent", "selectExpr", "windowComponent", 
			"aggregateComponent", "joinComponent", "mapToStateComponent", "stateOperation", 
			"mapToDataComponent", "streamOperator", "edge", "scheduleProp", "aggExpr", 
			"aggFunc", "joinType", "compOp", "arithOp", "typeName", "literal", "name", 
			"expression", "builtinFunc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'dataflow'", "'producer'", "'consumer'", "'filter'", "'select'", 
			"'derive'", "'window'", "'aggregate'", "'join'", "'map_to_state'", "'map_to_data'", 
			"'edge'", "'AS'", "'ON'", "'BY'", "'GROUP'", "'KEY'", "'VALUE'", "'USING'", 
			"'TYPE'", "'SLIDE'", "'WATERMARK'", "'SCHEDULE'", "'persist'", "'volatile'", 
			"'frequency'", "'delivery'", "'DATA'", "'STATE'", "'high'", "'medium'", 
			"'low'", "'at_most_once'", "'at_least_once'", "'exactly_once'", "'AND'", 
			"'OR'", "'NOT'", "'IS'", "'NULL'", "'BETWEEN'", "'TRUE'", "'FALSE'", 
			"'INNER'", "'LEFT'", "'LEFT_SEMI'", "'FULL'", "'FULL_OUTER'", "'REPLACE'", 
			"'INCREMENT'", "'DECREMENT'", "'MAXIMUM'", "'MINIMUM'", "'COLLECT'", 
			"'ISTREAM'", "'DSTREAM'", "'RSTREAM'", "'SUM'", "'COUNT'", "'AVG'", "'MAX'", 
			"'MIN'", "'LAST'", "'FIRST'", "'STDDEV'", "'VARIANCE'", "'COLLECT_LIST'", 
			"'UPPER'", "'LOWER'", "'ROUND'", "'ABS'", "'FLOOR'", "'CEIL'", "'CAST'", 
			"'COALESCE'", "'LENGTH'", "'SUBSTRING'", "'CONCAT'", "'TO_TIMESTAMP'", 
			"'DATE_FORMAT'", "'YEAR'", "'MONTH'", "'DAY'", "'HOUR'", "'DOUBLE'", 
			"'LONG'", "'STRING_TYPE'", "'BOOLEAN'", "'TIMESTAMP'", "'CASE'", "'WHEN'", 
			"'THEN'", "'ELSE'", "'END'", "'='", "'!='", "'>'", "'<'", "'>='", "'<='", 
			"'+'", "'-'", "'*'", "'/'", "'->'", "','", "':'", "'{'", "'}'", "'['", 
			"']'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DATAFLOW", "PRODUCER", "CONSUMER", "FILTER", "SELECT", "DERIVE", 
			"WINDOW", "AGGREGATE", "JOIN", "MAPTOSTATE", "MAPTODATA", "EDGE", "AS", 
			"ON", "BY", "GROUP", "KEY", "VALUE", "USING", "TYPE", "SLIDE", "WATERMARK", 
			"SCHEDULE", "PERSIST", "VOLATILE", "FREQUENCY", "DELIVERY", "DATA", "STATE", 
			"HIGH", "MEDIUM", "LOW", "AT_MOST_ONCE", "AT_LEAST_ONCE", "EXACTLY_ONCE", 
			"AND", "OR", "NOT", "IS", "NULL", "BETWEEN", "TRUE", "FALSE", "INNER", 
			"LEFT", "LEFT_SEMI", "FULL", "FULL_OUTER", "REPLACE", "INCREMENT", "DECREMENT", 
			"MAXIMUM", "MINIMUM", "COLLECT", "ISTREAM", "DSTREAM", "RSTREAM", "SUM", 
			"COUNT", "AVG", "MAX", "MIN", "LAST", "FIRST", "STDDEV", "VARIANCE", 
			"COLLECT_LIST", "UPPER", "LOWER", "ROUND", "ABS", "FLOOR", "CEIL", "CAST", 
			"COALESCE", "LENGTH", "SUBSTRING", "CONCAT", "TO_TIMESTAMP", "DATE_FORMAT", 
			"YEAR", "MONTH", "DAY", "HOUR", "T_DOUBLE", "T_LONG", "T_STRING", "T_BOOLEAN", 
			"T_TIMESTAMP", "CASE", "WHEN", "THEN", "ELSE", "END", "EQ", "NEQ", "GT", 
			"LT", "GTE", "LTE", "PLUS", "MINUS", "STAR", "SLASH", "ARROW", "COMMA", 
			"COLON", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
			"STRING", "NUMBER", "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dataflow.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DataflowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataflowContext extends ParserRuleContext {
		public TerminalNode DATAFLOW() { return getToken(DataflowParser.DATAFLOW, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(DataflowParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DataflowParser.RBRACE, 0); }
		public TerminalNode EOF() { return getToken(DataflowParser.EOF, 0); }
		public List<ProducerContext> producer() {
			return getRuleContexts(ProducerContext.class);
		}
		public ProducerContext producer(int i) {
			return getRuleContext(ProducerContext.class,i);
		}
		public List<ActionComponentContext> actionComponent() {
			return getRuleContexts(ActionComponentContext.class);
		}
		public ActionComponentContext actionComponent(int i) {
			return getRuleContext(ActionComponentContext.class,i);
		}
		public List<ConsumerContext> consumer() {
			return getRuleContexts(ConsumerContext.class);
		}
		public ConsumerContext consumer(int i) {
			return getRuleContext(ConsumerContext.class,i);
		}
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public DataflowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataflow; }
	}

	public final DataflowContext dataflow() throws RecognitionException {
		DataflowContext _localctx = new DataflowContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dataflow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(DATAFLOW);
			setState(71);
			name();
			setState(72);
			match(LBRACE);
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73);
				producer();
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PRODUCER );
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4080L) != 0)) {
				{
				{
				setState(78);
				actionComponent();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				consumer();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CONSUMER );
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				edge();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EDGE );
			setState(94);
			match(RBRACE);
			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProducerContext extends ParserRuleContext {
		public TerminalNode PRODUCER() { return getToken(DataflowParser.PRODUCER, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FrequencyContext frequency() {
			return getRuleContext(FrequencyContext.class,0);
		}
		public SchemaContext schema() {
			return getRuleContext(SchemaContext.class,0);
		}
		public ProducerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_producer; }
	}

	public final ProducerContext producer() throws RecognitionException {
		ProducerContext _localctx = new ProducerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_producer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(PRODUCER);
			setState(98);
			name();
			setState(99);
			type();
			setState(100);
			frequency();
			setState(101);
			schema();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(DataflowParser.LBRACE, 0); }
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(DataflowParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(DataflowParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DataflowParser.COMMA, i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(LBRACE);
			setState(104);
			fieldDef();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(105);
				match(COMMA);
				setState(106);
				fieldDef();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDefContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DataflowParser.COLON, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public FieldDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDef; }
	}

	public final FieldDefContext fieldDef() throws RecognitionException {
		FieldDefContext _localctx = new FieldDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			name();
			setState(115);
			match(COLON);
			setState(116);
			typeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConsumerContext extends ParserRuleContext {
		public TerminalNode CONSUMER() { return getToken(DataflowParser.CONSUMER, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FrequencyContext frequency() {
			return getRuleContext(FrequencyContext.class,0);
		}
		public DeliveryContext delivery() {
			return getRuleContext(DeliveryContext.class,0);
		}
		public ConsumerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consumer; }
	}

	public final ConsumerContext consumer() throws RecognitionException {
		ConsumerContext _localctx = new ConsumerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_consumer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(CONSUMER);
			setState(119);
			name();
			setState(120);
			type();
			setState(121);
			frequency();
			setState(122);
			delivery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
